{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 122,
  "lineage": "c7fffcfe-f55c-c261-18bf-66eee8b7bece",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fffe41398c5d0608",
            "public_dns": "ec2-54-166-134-112.compute-1.amazonaws.com",
            "public_ip": "54.166.134.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionOS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:049048201435:instance/i-0db0c7fdc6a51b3c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db0c7fdc6a51b3c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openstack-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d639c6a464584448",
            "private_dns": "ip-192-168-0-148.ec2.internal",
            "private_ip": "192.168.0.148",
            "public_dns": "ec2-3-85-23-50.compute-1.amazonaws.com",
            "public_ip": "3.85.23.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01966e36a65c3c340",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07d858c465f1b5510"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f60709d5e096a495",
            "tags": {
              "Name": "bastionOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d858c465f1b5510"
            ]
          },
          "dependencies": [
            "aws_security_group.bastionSG",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlOS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:049048201435:instance/i-00895800db91a7439",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00895800db91a7439",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openstack-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b7b4b8014c1363a",
            "private_dns": "ip-192-168-1-140.ec2.internal",
            "private_ip": "192.168.1.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06bbfaf3fc6ebc06a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06dad79ec1199c6b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f13a0063581c9a54",
            "tags": {
              "Name": "mysqlOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06dad79ec1199c6b5"
            ]
          },
          "dependencies": [
            "aws_security_group.bastionSG",
            "aws_security_group.mysqlSG",
            "aws_security_group.wordpressSG",
            "aws_subnet.subnet-private",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressOS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:049048201435:instance/i-0ac6a6f16a50aa363",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac6a6f16a50aa363",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "openstack-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-051f09980280f4960",
            "private_dns": "ip-192-168-0-199.ec2.internal",
            "private_ip": "192.168.0.199",
            "public_dns": "ec2-34-235-156-233.compute-1.amazonaws.com",
            "public_ip": "34.235.156.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c8970025509f598d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ac45a4310377a37a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f60709d5e096a495",
            "tags": {
              "Name": "wordpressOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac45a4310377a37a"
            ]
          },
          "dependencies": [
            "aws_instance.mysqlOS",
            "aws_security_group.bastionSG",
            "aws_security_group.mysqlSG",
            "aws_security_group.wordpressSG",
            "aws_subnet.subnet-private",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:internet-gateway/igw-0d2529485b957bc43",
            "id": "igw-0d2529485b957bc43",
            "owner_id": "049048201435",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fffe41398c5d0608",
            "id": "nat-052c6243469709063",
            "network_interface_id": "eni-06088d8bded0b879e",
            "private_ip": "192.168.0.90",
            "public_ip": "54.166.134.112",
            "subnet_id": "subnet-0f60709d5e096a495",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.for_nat",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04a8df13bb2fafc98",
            "owner_id": "049048201435",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-052c6243469709063",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_eip.for_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b4b0d122b217a8a7",
            "owner_id": "049048201435",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2529485b957bc43",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a16a2e8146f1f3",
            "route_table_id": "rtb-04a8df13bb2fafc98",
            "subnet_id": "subnet-0f13a0063581c9a54"
          },
          "dependencies": [
            "aws_eip.for_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.subnet-private",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a362834c9ba96b",
            "route_table_id": "rtb-0b4b0d122b217a8a7",
            "subnet_id": "subnet-0f60709d5e096a495"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:security-group/sg-07d858c465f1b5510",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d858c465f1b5510",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastionSG",
            "name_prefix": null,
            "owner_id": "049048201435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastionSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:security-group/sg-06dad79ec1199c6b5",
            "description": "Allow wordpress and bastion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dad79ec1199c6b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac45a4310377a37a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d858c465f1b5510"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysqlSG",
            "name_prefix": null,
            "owner_id": "049048201435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysqlSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_security_group.bastionSG",
            "aws_security_group.wordpressSG",
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpressSG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:security-group/sg-0ac45a4310377a37a",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac45a4310377a37a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpressSG",
            "name_prefix": null,
            "owner_id": "049048201435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpressSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:subnet/subnet-0f13a0063581c9a54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f13a0063581c9a54",
            "map_public_ip_on_launch": false,
            "owner_id": "049048201435",
            "tags": {
              "Name": "subnet-private"
            },
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:subnet/subnet-0f60709d5e096a495",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0f60709d5e096a495",
            "map_public_ip_on_launch": true,
            "owner_id": "049048201435",
            "tags": {
              "Name": "subnet-public"
            },
            "vpc_id": "vpc-08537eeca29d2528d"
          },
          "dependencies": [
            "aws_vpc.vpc4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049048201435:vpc/vpc-08537eeca29d2528d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-029cf28559c4d3c26",
            "default_route_table_id": "rtb-0c3c945552755416c",
            "default_security_group_id": "sg-0c72949f63f39390e",
            "dhcp_options_id": "dopt-2e9a1454",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08537eeca29d2528d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3c945552755416c",
            "owner_id": "049048201435",
            "tags": {
              "Name": "vpc4"
            }
          }
        }
      ]
    }
  ]
}